[gd_scene load_steps=62 format=3 uid="uid://cvt64b17oibxw"]

[ext_resource type="Script" path="res://intermission.gd" id="1_5bu1y"]
[ext_resource type="Texture2D" uid="uid://cd45akbmq8xu7" path="res://background/81DnkmWlKVL.jpg" id="1_kgv4t"]
[ext_resource type="AudioStream" uid="uid://dr21j52aohrda" path="res://Sound/Applause.mp3" id="2_5oujr"]
[ext_resource type="Texture2D" uid="uid://bqitbst01oir5" path="res://background/crow_1.png" id="3_omnd7"]
[ext_resource type="Texture2D" uid="uid://cye72km3tgsmt" path="res://background/Crow_2.png" id="4_mv274"]
[ext_resource type="Texture2D" uid="uid://bg7joutnvswyr" path="res://Boss/conductorsheet2.png" id="6_ntoag"]
[ext_resource type="Texture2D" uid="uid://dsbqx3bf5nbph" path="res://background/loop-Sheet.png" id="6_q5qch"]
[ext_resource type="FontFile" uid="uid://lj0yld1cmfbe" path="res://UI/MSMINCHO.TTF" id="8_5wwkv"]

[sub_resource type="SpriteFrames" id="SpriteFrames_xj3un"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("3_omnd7")
}, {
"duration": 1.0,
"texture": ExtResource("4_mv274")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="AtlasTexture" id="AtlasTexture_nhk8k"]
atlas = ExtResource("6_q5qch")
region = Rect2(0, 0, 350, 381)

[sub_resource type="AtlasTexture" id="AtlasTexture_uwggk"]
atlas = ExtResource("6_q5qch")
region = Rect2(350, 0, 350, 381)

[sub_resource type="AtlasTexture" id="AtlasTexture_hqypr"]
atlas = ExtResource("6_q5qch")
region = Rect2(700, 0, 350, 381)

[sub_resource type="AtlasTexture" id="AtlasTexture_vlfj2"]
atlas = ExtResource("6_q5qch")
region = Rect2(1050, 0, 350, 381)

[sub_resource type="AtlasTexture" id="AtlasTexture_knjmo"]
atlas = ExtResource("6_q5qch")
region = Rect2(1400, 0, 350, 381)

[sub_resource type="AtlasTexture" id="AtlasTexture_5n4ps"]
atlas = ExtResource("6_q5qch")
region = Rect2(1750, 0, 350, 381)

[sub_resource type="AtlasTexture" id="AtlasTexture_nra2s"]
atlas = ExtResource("6_q5qch")
region = Rect2(2100, 0, 350, 381)

[sub_resource type="SpriteFrames" id="SpriteFrames_anyt5"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_nhk8k")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_uwggk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hqypr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vlfj2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_knjmo")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5n4ps")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_nra2s")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="AtlasTexture" id="AtlasTexture_7x5sd"]
atlas = ExtResource("6_ntoag")
region = Rect2(0, 0, 454, 449)

[sub_resource type="AtlasTexture" id="AtlasTexture_w5nwc"]
atlas = ExtResource("6_ntoag")
region = Rect2(454, 0, 454, 449)

[sub_resource type="AtlasTexture" id="AtlasTexture_b0ktv"]
atlas = ExtResource("6_ntoag")
region = Rect2(908, 0, 454, 449)

[sub_resource type="AtlasTexture" id="AtlasTexture_rxewx"]
atlas = ExtResource("6_ntoag")
region = Rect2(1362, 0, 454, 449)

[sub_resource type="AtlasTexture" id="AtlasTexture_4iwfp"]
atlas = ExtResource("6_ntoag")
region = Rect2(1816, 0, 454, 449)

[sub_resource type="AtlasTexture" id="AtlasTexture_fn8wu"]
atlas = ExtResource("6_ntoag")
region = Rect2(2270, 0, 454, 449)

[sub_resource type="AtlasTexture" id="AtlasTexture_m3l80"]
atlas = ExtResource("6_ntoag")
region = Rect2(2724, 0, 454, 449)

[sub_resource type="AtlasTexture" id="AtlasTexture_vc8eb"]
atlas = ExtResource("6_ntoag")
region = Rect2(3178, 0, 454, 449)

[sub_resource type="AtlasTexture" id="AtlasTexture_m1awt"]
atlas = ExtResource("6_ntoag")
region = Rect2(3632, 0, 454, 449)

[sub_resource type="AtlasTexture" id="AtlasTexture_cl6s6"]
atlas = ExtResource("6_ntoag")
region = Rect2(4086, 0, 454, 449)

[sub_resource type="AtlasTexture" id="AtlasTexture_hiese"]
atlas = ExtResource("6_ntoag")
region = Rect2(4540, 0, 454, 449)

[sub_resource type="AtlasTexture" id="AtlasTexture_lj2nm"]
atlas = ExtResource("6_ntoag")
region = Rect2(4994, 0, 454, 449)

[sub_resource type="AtlasTexture" id="AtlasTexture_fkweo"]
atlas = ExtResource("6_ntoag")
region = Rect2(5448, 0, 454, 449)

[sub_resource type="AtlasTexture" id="AtlasTexture_6rmq2"]
atlas = ExtResource("6_ntoag")
region = Rect2(5902, 0, 454, 449)

[sub_resource type="AtlasTexture" id="AtlasTexture_n646r"]
atlas = ExtResource("6_ntoag")
region = Rect2(6356, 0, 454, 449)

[sub_resource type="AtlasTexture" id="AtlasTexture_lhjhb"]
atlas = ExtResource("6_ntoag")
region = Rect2(6810, 0, 454, 449)

[sub_resource type="AtlasTexture" id="AtlasTexture_ytu2c"]
atlas = ExtResource("6_ntoag")
region = Rect2(7264, 0, 454, 449)

[sub_resource type="AtlasTexture" id="AtlasTexture_vs6tn"]
atlas = ExtResource("6_ntoag")
region = Rect2(7718, 0, 454, 449)

[sub_resource type="AtlasTexture" id="AtlasTexture_fwmcq"]
atlas = ExtResource("6_ntoag")
region = Rect2(8172, 0, 454, 449)

[sub_resource type="AtlasTexture" id="AtlasTexture_qbmg1"]
atlas = ExtResource("6_ntoag")
region = Rect2(8626, 0, 454, 449)

[sub_resource type="AtlasTexture" id="AtlasTexture_ujx16"]
atlas = ExtResource("6_ntoag")
region = Rect2(9080, 0, 454, 449)

[sub_resource type="AtlasTexture" id="AtlasTexture_in4ql"]
atlas = ExtResource("6_ntoag")
region = Rect2(9534, 0, 454, 449)

[sub_resource type="AtlasTexture" id="AtlasTexture_ekuhf"]
atlas = ExtResource("6_ntoag")
region = Rect2(9988, 0, 454, 449)

[sub_resource type="AtlasTexture" id="AtlasTexture_rixx0"]
atlas = ExtResource("6_ntoag")
region = Rect2(10442, 0, 454, 449)

[sub_resource type="AtlasTexture" id="AtlasTexture_enjki"]
atlas = ExtResource("6_ntoag")
region = Rect2(10896, 0, 454, 449)

[sub_resource type="AtlasTexture" id="AtlasTexture_axmov"]
atlas = ExtResource("6_ntoag")
region = Rect2(11350, 0, 454, 449)

[sub_resource type="AtlasTexture" id="AtlasTexture_44ef1"]
atlas = ExtResource("6_ntoag")
region = Rect2(11804, 0, 454, 449)

[sub_resource type="AtlasTexture" id="AtlasTexture_frwwd"]
atlas = ExtResource("6_ntoag")
region = Rect2(12258, 0, 454, 449)

[sub_resource type="AtlasTexture" id="AtlasTexture_eerhn"]
atlas = ExtResource("6_ntoag")
region = Rect2(12712, 0, 454, 449)

[sub_resource type="AtlasTexture" id="AtlasTexture_oqjed"]
atlas = ExtResource("6_ntoag")
region = Rect2(13166, 0, 454, 449)

[sub_resource type="AtlasTexture" id="AtlasTexture_rmh08"]
atlas = ExtResource("6_ntoag")
region = Rect2(13620, 0, 454, 449)

[sub_resource type="AtlasTexture" id="AtlasTexture_imxta"]
atlas = ExtResource("6_ntoag")
region = Rect2(14074, 0, 454, 449)

[sub_resource type="AtlasTexture" id="AtlasTexture_0mi1j"]
atlas = ExtResource("6_ntoag")
region = Rect2(14528, 0, 454, 449)

[sub_resource type="AtlasTexture" id="AtlasTexture_ahkbi"]
atlas = ExtResource("6_ntoag")
region = Rect2(14982, 0, 454, 449)

[sub_resource type="AtlasTexture" id="AtlasTexture_1164c"]
atlas = ExtResource("6_ntoag")
region = Rect2(15436, 0, 454, 449)

[sub_resource type="AtlasTexture" id="AtlasTexture_nks4d"]
atlas = ExtResource("6_ntoag")
region = Rect2(15890, 0, 454, 449)

[sub_resource type="AtlasTexture" id="AtlasTexture_0h8ic"]
atlas = ExtResource("6_ntoag")
region = Rect2(16344, 0, 454, 449)

[sub_resource type="AtlasTexture" id="AtlasTexture_lhmwx"]
atlas = ExtResource("6_ntoag")
region = Rect2(16798, 0, 454, 449)

[sub_resource type="AtlasTexture" id="AtlasTexture_ldnia"]
atlas = ExtResource("6_ntoag")
region = Rect2(17252, 0, 454, 449)

[sub_resource type="AtlasTexture" id="AtlasTexture_pmgdp"]
atlas = ExtResource("6_ntoag")
region = Rect2(17706, 0, 454, 449)

[sub_resource type="AtlasTexture" id="AtlasTexture_tmnma"]
atlas = ExtResource("6_ntoag")
region = Rect2(18160, 0, 454, 449)

[sub_resource type="AtlasTexture" id="AtlasTexture_estr2"]
atlas = ExtResource("6_ntoag")
region = Rect2(18614, 0, 454, 449)

[sub_resource type="SpriteFrames" id="SpriteFrames_ge4vy"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_7x5sd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_w5nwc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_b0ktv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rxewx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4iwfp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fn8wu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_m3l80")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vc8eb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_m1awt")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_cl6s6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hiese")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lj2nm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fkweo")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6rmq2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_n646r")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lhjhb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ytu2c")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vs6tn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fwmcq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qbmg1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ujx16")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_in4ql")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ekuhf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rixx0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_enjki")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_axmov")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_44ef1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_frwwd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_eerhn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_oqjed")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rmh08")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_imxta")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0mi1j")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ahkbi")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1164c")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_nks4d")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0h8ic")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lhmwx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ldnia")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pmgdp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tmnma")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_estr2")
}],
"loop": true,
"name": &"default",
"speed": 24.0
}]

[sub_resource type="Theme" id="Theme_bsipd"]
default_font = ExtResource("8_5wwkv")
default_font_size = 100

[node name="Intermission" type="CanvasLayer"]
script = ExtResource("1_5bu1y")

[node name="ColorRect" type="ColorRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 1)

[node name="TextureRect" type="TextureRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = 600.0
offset_bottom = 500.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.597725, 0.679062)
texture = ExtResource("1_kgv4t")
metadata/_edit_lock_ = true

[node name="Crow1" type="AnimatedSprite2D" parent="."]
position = Vector2(139.002, 705.308)
scale = Vector2(0.244665, 0.277959)
sprite_frames = SubResource("SpriteFrames_xj3un")
frame = 1
frame_progress = 0.226267

[node name="Crow2" type="AnimatedSprite2D" parent="."]
position = Vector2(755.998, 705.308)
scale = Vector2(0.244665, 0.277959)
sprite_frames = SubResource("SpriteFrames_xj3un")
frame = 1
frame_progress = 0.226267
flip_h = true

[node name="Applause" type="AudioStreamPlayer" parent="."]
stream = ExtResource("2_5oujr")
volume_db = -16.88
mix_target = 1
max_polyphony = 2

[node name="Barrier" type="AnimatedSprite2D" parent="."]
position = Vector2(438, 300)
scale = Vector2(1.51091, 1.53286)
sprite_frames = SubResource("SpriteFrames_anyt5")

[node name="MurderMaestro" type="AnimatedSprite2D" parent="."]
position = Vector2(458, 277)
scale = Vector2(1.31674, 1.31674)
sprite_frames = SubResource("SpriteFrames_ge4vy")
metadata/_edit_lock_ = true

[node name="Title" type="Label" parent="."]
offset_left = 115.0
offset_top = 894.0
offset_right = 815.0
offset_bottom = 1089.0
theme = SubResource("Theme_bsipd")
text = "MURDER MAESTRO"

[node name="Title2" type="Label" parent="."]
offset_left = 274.0
offset_top = 838.0
offset_right = 974.0
offset_bottom = 1033.0
theme = SubResource("Theme_bsipd")
theme_type_variation = &"GraphNodeTitleLabel"
theme_override_fonts/font = ExtResource("8_5wwkv")
theme_override_font_sizes/font_size = 60
text = "Please wait..."

[node name="BlinkTimer" type="Timer" parent="."]

[connection signal="finished" from="Applause" to="." method="_on_applause_finished"]
[connection signal="timeout" from="BlinkTimer" to="." method="_on_blink_timer_timeout"]
